// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertInterfacesToMarkdown should list the interface's implementations 1`] = `
"## User

Properties that are common to the different kind of users.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Implemented by</strong></p>

- [Admin](#)

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
name<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The user&#39;s name.</p>
</td>
</tr>
</tbody>
</table>

"
`;

exports[`convertInterfacesToMarkdown should render interfaces 1`] = `
"## User

Properties that are common to the different kind of users.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
name<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The user&#39;s name.</p>
</td>
</tr>
</tbody>
</table>

"
`;

exports[`convertInterfacesToMarkdown should render the interface's interfaces 1`] = `
"## Admin

A special kind of user.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Implements</strong></p>

- [User](#)

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
power<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The admin&#39;s special power.</p>
</td>
</tr>
</tbody>
</table>

## User

Properties that are common to the different kind of users.

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Implemented by</strong></p>

- [Admin](#)

<p style={{ marginBottom: \\"0.4em\\" }}><strong>Fields</strong></p>

<table>
<thead><tr><th>Name</th><th>Description</th></tr></thead>
<tbody>
<tr>
<td>
name<br />
<a href=\\"#\\"><code>String!</code></a>
</td>
<td>
<p>The user&#39;s name.</p>
</td>
</tr>
</tbody>
</table>

"
`;
